PyMaker/datas/object2/RawHTML/i18201/Python_DOC_referPages.is-indentationerror-a-syntax-error-in-python-or-not.txt
<div class="post-text" itemprop="text">
<p>I have a simple question, </p>
<p>Is <code>IndentationError</code> a <code>SyntaxError</code> in Python or not? </p>
<p>I think it is not but since I am a beginner I would like to be sure. 
Are syntax errors only those which give me <code>SyntaxError</code> as a response in an interpreter? For example, if I type </p>
<pre><code>3f = 22 
</code></pre>
<p>I get </p>
<pre><code>SyntaxError: invalid syntax 
</code></pre>
<p>So if there's something else (<code>IndentationErro</code>r etc), may it be a sub-type of <code>SyntaxError</code> or not?</p>
</div>
<div class="post-text" itemprop="text">
<pre><code>&gt;&gt;&gt; issubclass(IndentationError, SyntaxError)
True
</code></pre>
<p>It means yes</p>
<p>More info <a href="http://docs.python.org/3/library/exceptions.html#exception-hierarchy" rel="noreferrer">here</a> and <a href="http://docs.python.org/3/library/functions.html#issubclass" rel="noreferrer">here</a></p>
</div>
<div class="post-text" itemprop="text">
<p>Your example is a SyntaxError, because you can't have an identifier that starts with a number:</p>
<pre><code>&gt;&gt;&gt; 3f = 22
  File "&lt;stdin&gt;", line 1
    3f = 22
     ^
SyntaxError: invalid syntax


&gt;&gt;&gt;     f3 = 22
  File "&lt;stdin&gt;", line 1
    f3 = 22
    ^
IndentationError: unexpected indent


&gt;&gt;&gt; def test():
... f3 = 22
  File "&lt;stdin&gt;", line 2
    f3 = 22
     ^
IndentationError: expected an indented block
</code></pre>
<p>An IndentationError is a kind of SyntaxError, see the method resolution order in: help(IndentationError) and: <a href="http://docs.python.org/2/library/exceptions.html#exceptions.IndentationError" rel="nofollow">http://docs.python.org/2/library/exceptions.html#exceptions.IndentationError</a></p>
<p>Valid identifiers:</p>
<pre><code>test
test3
test_3
__3Test_3______
</code></pre>
<p>Invalid identifiers:</p>
<pre><code>3f
333
33__
# Using any symbol other than: _
</code></pre>
<p>See also:</p>
<p><a href="http://docs.python.org/2/reference/lexical_analysis.html#identifiers" rel="nofollow">http://docs.python.org/2/reference/lexical_analysis.html#identifiers</a></p>
</div>
<span class="comment-copy">Thank you! Your answer is very helpful!</span>
